media/bazarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  hostnames:
    - bazarr.ant-podz.xyz
  parentRefs:
    - name: traefik-production
      namespace: networking
  rules:
    - matches:
      backendRefs:
        - name: bazarr
          port: 6767
