media/bazarr/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.192.168.86.2.nip.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - kind: Service
          name: bazarr
          port: 6767
